--- a/package.json
+++ b/package.json
@@ -1,20 +1,8 @@
 {
   "name": "missed-call-backend",
   "version": "1.0.0",
-  "main": "index.js",
-
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
+  "type": "module",
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
-    "emailjs": "^4.0.3",
-    "express": "^5.1.0",
-    "nodemailer": "^7.0.3"
+    "nodemailer": "^6.9.8"
   }
 }
